--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,213 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
+}
+
+/* shared styles */
+* {
+    font-family: Lato;
+}
+
+
+/* banner related styles */
+
+.banner-container {
+    width: 1920px;
+    height: 850px;
+    background: rgba(229, 84, 115, 0.10);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.banner-title {
+    width: 708px;
+    color: #272727;
+    font-family: Lato;
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+
+}
+
+.banner-description {
+    width: 634px;
+    color: rgba(39, 39, 39, 0.60);
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 30px;
+
+}
+
+.btn {
+    padding: 20px 43px;
+    border-radius: 8px;
+    background: #E55473;
+    color: #FFF;
+    /* font-family: Lato; */
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 32px;
+
+}
+
+.img-1 {
+    width: 635px;
+    height: 800px;
+    text-align: center;
+
+
+
+}
+
+/* feature related styles */
+.featured {
+    background: #FFF;
+    text-align: center;
+
+}
+
+.featured-title {
+    margin-top: 100px;
+    color: #272727;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.featured-description {
+    margin-top: 24px;
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+}
+
+/* flower category */
+
+.flower-category {
+    width: 1440px;
+    /* margin: auto; */
+    margin-left: 100px;
+    display: flex;
+    margin-top: 50px;
+
+}
+
+.flower-1 {
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    margin-left: 200px;
+    width: 464px;
+height: 538px;
+
+}
+
+.flower-2 {
+    margin-left: 50px;
+    width: 464px;
+height: 538px;
+text-align: center;
+
+
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+
+}
+
+.flower-3 {
+    margin-left: 50px;
+    width: 464px;
+height: 538px;
+
+
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+
+}
+
+.image-1 {
+    width: 310px;
+    height: 428px;
+    margin-top: 110px;
+    margin-left: 40px;
+
+}
+
+.image-2 {
+    width: 370px;
+    height: 370px;
+    margin-top: 100px;
+
+}
+
+.image-3 {
+    width: 314px;
+    height: 471px;
+    margin-top: 65px;
+    margin-left: 40px;
+
+
+}
+.image-title{
+
+    display: flex;
+    /* justify-content: space-around; */
+    margin-top: 40px;
+    text-decoration: underline;
+    align-items: center;
+    /* border: 2px solid red; */
+
+
+
+}
+
+.img-title1{
+    margin-left: 400px;
+
+}
+.img-title2{
+    margin-left: 310px;
+
+}
+.img-title3{
+    margin-left: 300px;
+
+}
+
+/* shop details */
+
+.shop-details{
+    display: flex;
+    width: 1250px;
+height: 320px;
+border-radius: 8px;
+background: rgba(39, 39, 39, 0.05);
+margin-left: 300px;
+margin-top: 100px;
+justify-content: space-evenly;
+align-items: center;
+
+j
+
+}
+.shop-details-item{
+
+}
+.shop-details-img{
+    align-items: center;
+    margin-left: 100px;
+
+
+}
+.shop-details-title{
+
+    margin-top: 10px;
+
 }
