--- a/styles.css
+++ b/styles.css
@@ -211,3 +211,50 @@ j
     margin-top: 10px;
 
 }
+
+
+/* hot deal related styles */
+
+.hot-deal{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 8px;
+background: rgba(229, 84, 115, 0.05);
+height: 620px;
+margin-top: 128px;
+
+}
+
+.hot-deal-item{
+    margin-left: 300px;
+
+}
+.hot-deal-title{
+    color: #272727;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.hot-deal-description{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+margin-top: 10px;
+}
+
+.hot-deal-img{
+
+}
+.hot-deal-img-1{
+    width: 318px;
+height: 420px;
+margin-right: 200px;
+
+}
