--- a/styles.css
+++ b/styles.css
@@ -339,3 +339,78 @@ font-style: normal;
 font-weight: 400;
 line-height: 30px;
 }
+
+
+/* footer related styles */
+footer{
+    background: #111010;
+        height: 449px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.footer-shop-title{
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-size: 48px;
+    font-weight: 800;
+
+
+
+
+}
+
+.text-color{
+    color: #E55473;
+
+
+
+}
+.footer-shop-description{
+    text-align: center;
+    margin-top: 10px;
+
+
+    color: rgba(255, 255, 255, 0.90);
+
+
+}
+
+.copyright{
+    color: rgba(255, 255, 255, 0.40);
+    margin-top: 30px;
+    text-align: center;
+
+
+
+}
+
+.recommended-flowers-image-1{
+
+    width: 300px;
+    height: 200px;
+    box-shadow: 4px 4px 8px gray;
+}
+.recommended-flowers-title{
+        
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+margin-top: 50px;
+
+}
+
+.recommended-flowers-image{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+
+    margin-top: 30px;
+}
