--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,8 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    margin-top: 50px;
     
 }
 .footer-shop-title{
