--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@
     align-items: center;
 
 }
+.banner-item{
+}
 
 .banner-title {
     width: 708px;
@@ -59,13 +61,19 @@
 
 }
 
-.img-1 {
-    width: 635px;
-    height: 800px;
-    
+.img-1{
+    width: 445px;
+    height: 730px;
+    margin-right: 500px;
+    margin-top: 50px;
+    margin-bottom: 0px;
 
+   
+}
 
-
+.banner-img{
+    /* border: 3px solid red; */
+  
 }
 
 /* feature related styles */
@@ -92,18 +100,21 @@
 /* flower category */
 
 .flower-category {
-    width: 1440px;
+    /* width: 1440px;
     /* margin: auto; */
     margin-left: 100px;
+    margin-right: 100px;
     display: flex;
     margin-top: 50px;
+    /* border: 3px solid red; */
+    padding-right: 200px; */
 
 }
 
 .flower-1 {
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
-    margin-left: 200px;
+    margin-left: 100px;
     width: 464px;
 height: 538px;
 
@@ -169,7 +180,7 @@ height: 538px;
 }
 
 .img-title1{
-    margin-left: 400px;
+    margin-left: 300px;
 
 }
 .img-title2{
@@ -189,7 +200,7 @@ height: 538px;
 height: 320px;
 border-radius: 8px;
 background: rgba(39, 39, 39, 0.05);
-margin-left: 300px;
+margin-left: 150px;
 margin-top: 100px;
 justify-content: space-evenly;
 align-items: center;
