--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,7 @@ margin-right: 200px;
 
 /* instagram part  */
 .instagram{
+    
     width: 600px;
     height: 150px;
     margin: auto;
@@ -298,14 +299,28 @@ margin-right: 200px;
 
 /* flower pics styles */
 .flower-pic{
-    width: 80%;
+    
+    /* margin:  0px auto; */
     display: flex;
-    justify-content: space-evenly;
-    margin-left: 240px;
+    justify-content: space-around
+    /* margin-left: 200px; */
     align-items: center;
-    margin-right: 240px;
-    margin-top: 40px;
+    
+    /* margin-right: 740px; */
+    /* border: 3px solid red; */
+    margin-left: 240px;
+    margin-right: 170px;
 
+
+    
+
+}
+.flower-pic-1{
+   
+    width: 300px;
+    height: 250px;
+    margin-left: 10px;
+    box-shadow: 5px 5px 8px gray;
 }
 
 /* latest deal styles */
@@ -354,6 +369,8 @@ line-height: 30px;
 
 /* footer related styles */
 footer{
+    box-shadow: 5px 5px 8px gray;
+
     background: #111010;
         height: 449px;
     display: flex;
